--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,7 @@ a {
 }
 @media (max-width: 600px) {
   .page header {
-    background-size: contain;
-    height: 153px;
+    height: auto;
   }
 }
 .page header .title {
@@ -499,7 +498,7 @@ a {
   margin-left: 30px;
 }
 .page footer {
-  height: 150px;
+  height: 120px;
   background-color: #2f375e;
   display: flex;
   justify-content: flex-end;
@@ -518,13 +517,10 @@ a {
     width: 140px;
   }
 }
-.page footer div img {
-  width: 100px;
-}
-@media (max-width: 600px) {
-  .page footer div img {
-    width: 80px;
-  }
+.page footer div span {
+  color: white;
+  font-weight: bold;
+  font-size: 23px;
 }
 @-webkit-keyframes scaleUp_down {
   0% {
