--- a/css/style.scss
+++ b/css/style.scss
@@ -425,7 +425,7 @@ a {
       height: 100px;
     }
     div {
-      
+      margin: auto;
       span {
         color: white;
         font-weight: bold;
